# feiying-mcp

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  api_client.py  database.py  devdocs.md  docker-compose.yml  env.example  hifly.db  main.py  mcp_server_config_demo.json  models.py  pyproject.toml  requirements.txt  server.py  smithery.yaml  task_manager.py  test_direct_request.py  test_voice_tools.py  testlistavators.py
docs/: api.md  configuration.md  examples.md
fastmcp-docs/: README.md  anthropic.md  asgi.md  bearer.md  changelog.md  chatgpt.md  claude-code.md  claude-desktop.md  cli.md  client.md  composition.md  context.md  contrib.md  decorating-methods.md  fastmcp-cli-__init__.md  fastmcp-cli-claude.md  fastmcp-cli-cli.md  fastmcp-cli-run.md  fastmcp-client-__init__.md  fastmcp-client-auth-__init__.md  fastmcp-client-auth-bearer.md  fastmcp-client-auth-oauth.md  fastmcp-client-client.md  fastmcp-client-logging.md  fastmcp-client-oauth_callback.md  fastmcp-client-progress.md  fastmcp-client-roots.md  fastmcp-client-sampling.md  fastmcp-client-transports.md  fastmcp-exceptions.md  fastmcp-prompts-__init__.md  fastmcp-prompts-prompt.md  fastmcp-prompts-prompt_manager.md  fastmcp-resources-__init__.md  fastmcp-resources-resource.md  fastmcp-resources-resource_manager.md  fastmcp-resources-template.md  fastmcp-resources-types.md  fastmcp-server-__init__.md  fastmcp-server-auth-__init__.md  (+58 more)
feiying_mcp/: __main__.py
migrations/: README  env.py
tests/: llm_natural_language_examples.md
tools/: audio_tools.py  avatar_tools.py  query_tools.py  (+3 more)
(+98 files in other folders)
